--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"start": "ts-node-dev app.ts",
+		"format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
