--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,23 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "sever.ts",
   "scripts": {
-		"start": "ts-node-dev app.ts",
-		"format": "prettier --write ."
+    "start": "ts-node-dev server.ts",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.8.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql2": "^3.6.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.18"
   }
 }
