--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/node": "^20.8.2",
+		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mysql2": "^3.6.1",
