--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/express-session": "^1.17.9",
 		"@types/node": "^20.8.2",
 		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-session": "^1.17.3",
 		"mysql2": "^3.6.1",
 		"prettier": "^3.0.3",
 		"ts-node": "^10.9.1",
