--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.13",
-    "@mui/material": "^5.14.13",
+    "@mui/material": "^5.14.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/styles": "^5.14.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
