--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@mui/material": "^5.14.14",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.1",
 		"@mui/styles": "^5.14.14",
+		"@mui/x-data-grid": "^6.16.3",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -21,7 +22,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.17.0",
 		"react-scripts": "5.0.1",
-		"styled-components": "^6.0.8",
+		"styled-components": "^6.1.0",
 		"updated": "^2.0.7",
 		"web-vitals": "^2.1.4"
 	},
