--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,16 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
-		"mysql2": "^3.6.1",
+		"knex": "^3.0.1",
+		"mysql": "^2.18.1",
+		"mysql2": "^3.6.2",
 		"prettier": "^3.0.3",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.2.2"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.18"
+		"@types/express": "^4.17.18",
+		"@types/mysql": "^2.15.23"
 	}
 }
