--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
 		"mysql": "^2.18.1",
 		"mysql2": "^3.6.2",
 		"prettier": "^3.0.3",
+		"socket.io": "^4.7.2",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.2.2"
